--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h3><a id="Class_Timing_16"></a>Class Timing</h3>
 <p>5-6 PM on Monday, Thursday and Friday</p>
 <h3><a id="Class_Venue_20"></a>Class Venue</h3>
-<p>NC-232, Nalanda Classroom Complex, IIT Kharagpur</p>
+<p>NR-221, Nalanda Classroom Complex, IIT Kharagpur</p>
 <h3><a id="Course_Content_24"></a>Course Content</h3>
 <ol>
 <li>Introduction</li>
