--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ layout: top
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
     <h2>Overview</h2>
     <p>
-      CS 60030 is a seven week, three credit course. It runs from
-      July 28th through November 27, 2016.
+      CS 60030 is a three credit running from
+      July 18th through November 27, 2016.
     </p>
     <p>
       There are two important dates where the registrar is concerned:
@@ -33,11 +33,11 @@ layout: top
       something until you sit down and try it out yourself.  The lecture and
       assignments are designed with this in mind &mdash; you should expect to learn
       the material by interacting with it directly.  The course material is
-      designed assuming you have no prior experience developing in a Unix
-      environment, but does assume that you have been exposed to solving
-      Computer Science problems at an introductory level (in any flavor /
-      language).  You are expected to put in an appropriate amount of effort to
-      complete the assignments.  Ultimately, what you put into the course is what
+      designed assuming you have no prior experience developing of Machine
+      Learning, but does assume knowledge of Probability and Statistic,
+      Programming and Data Structures.  You are expected to put in an
+      appropriate amount of effort to complete the assignments.
+      Ultimately, what you put into the course is what
       you will get out of it.
     </p>
     <!-- <div class="media">
